stopped info from overflowing to next line when score is over 1000

--- a/public/sass/styles.scss
+++ b/public/sass/styles.scss
@@ -202,7 +202,7 @@ button {
 .info{
      margin-left: auto;
      margin-right: auto;
-     width:400px;
+     width:390px;
     div{
       display:inline-block;
       margin-left: 10px;
